home page changes
changes to media query and layout

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="index.html" class="navbar-brand"> LOGO here</a>
+      <a href="index.html" class="navbar-brand"> Sistah Space</a>
     </div>
 
     <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -95,7 +95,7 @@
   <div class="carousel-inner" role="listbox">
     <div class="item active">
       <img src="images/1.JPG" alt="picture">
-      <div class = "carousel-caption yellow">
+      <div class = "carousel-caption ">
         <h2> Welcome to Sistah Space!</h2>
       </div>
     </div>
@@ -157,6 +157,15 @@
 
 <br>
 <div class = "container container-main">
+   <div class="row mobile-only"> 
+    <div class = "container " >
+      <h2 > Welcome to Sistah Space!</h2>
+      <p> Founded in October/Novermber 2015, Sistah Space was created to bridge the gap in domestic abuse services for grassroots and all other African heritage women and girls.</p>  
+      <p> We work with our local community and services to raise awareness of domestic and sexual abuse.</p>
+      <p> We provide advice and supoprt to victims of domestic and sexual abuse and violence. </p>
+    </div>
+  </div>
+
   <div class="row">
     <div class="col-sm-6" id ="our-journey">
             <div class='inner-column'>
@@ -169,12 +178,12 @@
  </p>
 
     <p class="text-justify">Alongside expertise in domestic abuse services, Sistah Space understands the specific needs of African heritage families. This means we can provide a 'safe' space for anyone who is concerned about domestic abuse. </p>
-     <p> Find out more <a href="x"> about us. </a> </p>
+     <p> Find out more <a href="pages/"> about us. </a> </p>
 
-<h3 class="text-justify inner-padding"> How we can help </h3>
+<h2 class="text-justify inner-padding"> How we can help </h2>
   <p class="text-justify"> We can <a href="x"> help you </a> or explain what to look out for if you are worried about someone else.</p>
 
-<h3 class="text-justify"> The team</h3>
+<h2 class="text-justify"> The team</h2>
   <p class="text-justify"> Meet <a href="x">the team </a> and find out what we've achieved by working with the African heritage community.</p>
 
 </div>
@@ -274,10 +283,10 @@
 
 <footer class="footer">
   <div class="container">
-    <p class>Place sticky footer content here.</p>
-    <p> next line </p>
-    <p> next line</p>
-    <p> next line</p>
+    <p class= "text-right" > Sistah Space 2016</p>
+    <p> </p>
+    <p> </p>
+    <p> </p>
   </div>
 </footer>
 
