--- a/pages/contact.html
+++ b/pages/contact.html
@@ -43,7 +43,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="" class="navbar-brand"> LOGO here</a>
+      <a href="" class="navbar-brand"> Home Page</a>
     </div>
 
     <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -99,10 +99,10 @@
 
 <footer class="footer">
   <div class="container">
-    <p class> Sistah Space is...</p>
-    <p> next line </p>
-    <p> next line</p>
-    <p> next line</p>
+    <p class= "text-right" > Sistah Space 2016</p>
+    <p> </p>
+    <p> </p>
+    <p> </p>
   </div>
 </footer>
 
