--- a/pages/history.html
+++ b/pages/history.html
@@ -1,3 +1,7 @@
+<html DOCTYPE!>
+
+<html>
+
 <head>
    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
@@ -22,7 +26,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="../index.html" class="navbar-brand"> LOGO here</a>
+      <a href="../index.html" class="navbar-brand"> Home Page</a>
     </div>
 
     <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -107,3 +111,17 @@
 </div>
 
 </div>
+
+<footer class="footer">
+  <div class="container">
+    <p class= "text-right" > Sistah Space 2016</p>
+    <p> </p>
+    <p> </p>
+    <p> </p>
+  </div>
+</footer>
+
+</body>
+</html>
+
+
