--- a/pages/our_work.html
+++ b/pages/our_work.html
@@ -24,7 +24,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="../index.html" class="navbar-brand"> Home</a>
+        <a href="../index.html" class="navbar-brand"> Home Page</a>
       </div>
 
     <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -126,8 +126,16 @@
 
 
 
-
 </div>
+<footer class="footer">
+  <div class="container">
+    <p class= "text-right" > Sistah Space 2016</p>
+    <p> </p>
+    <p> </p>
+    <p> </p>
+  </div>
+</footer>
+
 
 </body>
 
