--- a/pages/sanctuary.html
+++ b/pages/sanctuary.html
@@ -22,7 +22,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="../index.html" class="navbar-brand"> LOGO here</a>
+      <a href="../index.html" class="navbar-brand"> Home Page</a>
     </div>
 
     <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -63,6 +63,14 @@
   </div>
 </div>
 </div>	
+<footer class="footer">
+  <div class="container">
+    <p class= "text-right" > Sistah Space 2016</p>
+    <p> </p>
+    <p> </p>
+    <p> </p>
+  </div>
+</footer>
 
 </body>
 
