--- a/pages/shop.html
+++ b/pages/shop.html
@@ -23,7 +23,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="../index.html" class="navbar-brand"> LOGO here</a>
+      <a href="../index.html" class="navbar-brand"> Home Page</a>
     </div>
 
     <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -78,12 +78,13 @@
 
 <footer class="footer">
   <div class="container">
-    <p class> Sistah Space is...</p>
-    <p> next line </p>
-    <p> next line</p>
-    <p> next line</p>
+    <p class= "text-right" > Sistah Space 2016</p>
+    <p> </p>
+    <p> </p>
+    <p> </p>
   </div>
 </footer>
+
 
 
 <script>
