main-copy formatting, footer formatting

--- a/pages/history.html
+++ b/pages/history.html
@@ -1,3 +1,6 @@
+<html DOCTYPE!>
+<html>
+
 <head>
    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
@@ -22,7 +25,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="../index.html" class="navbar-brand"> LOGO here</a>
+      <a href="../index.html" class="navbar-brand"> Home Page</a>
     </div>
 
     <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -77,8 +80,7 @@
   <div class = "container">
         
     <img class = "img-responsive" src="../images/2.JPG" alt="picture">
-        <h2 class = "text-center"> Title</h2>
-        <h4 class="text-center"> Subtitle. </h4>
+
 
   </div>
 </div>
@@ -104,6 +106,20 @@
   <li>Insufficient adequate resources or places that reflect their cultural heritage.</li>
 </ul>
 
+
+
 </div>
 
 </div>
+
+<footer class="footer">
+  <div class="container">
+    <p class = "text-right"><strong>Sistah Space 2016</strong></p>
+    <p class = "text-right"> Sistah Space is a community based initiative that supports African heritage women and girls. </p>
+    <p class = "text-right"> We work with our local community and services to raise awareness of domestic and sexual abuse. </p>
+    <p>  </p>
+  </div>
+</footer>
+
+</body>
+</html>
