--- a/pages/news.html
+++ b/pages/news.html
@@ -31,15 +31,16 @@
 </head>
 
 <body>
- <div class="nav navbar-nav nav navbar-fixed-top" id="my-navbar"> 
-  <div class="container"> 
-    <div class="navbar-header"> 
+
+   <div class="nav navbar-nav nav navbar-fixed-top" id="my-navbar">
+  <div class="container">
+    <div class="navbar-header">
       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-        <span class="icon-bar"></span> 
+        <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="../index.html" class="navbar-brand"> LOGO here</a>
+      <a href="../index.html" class="navbar-brand"> Home Page</a>
     </div>
 
     <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -47,38 +48,43 @@
         <li class = "dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">about Sistah Space <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="../pages/our_work.html">Why Sistah Space?</a></li>
+           <li><a href="../pages/our_work.html">Why Sistah Space?</a></li>
             <li><a href="../pages/abuse.html">What is abuse?</a></li>
             <li><a href="../pages/our_team.html">What we do?</a></li> 
-            <li><a href="../pages/history.html">Background history</a></li>  
+            <li><a href="../pages/history.html">Background history</a></li>
           </ul>
-        </li>      
+        </li>
         <li class = "dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" > How we can help you <span class="caret"></span></a>
+
             <ul class = "dropdown-menu">  
               <li><a href="../pages/advice.html"> Advice </a></li>
-              <li><a href="../pages/sanctuary.html"> Sistah Space Sanctuary </a></li>            </ul>
+              <li><a href="../pages/sanctuary.html"> Sistah Space Sanctuary </a></li>
+
+            </ul>
           </li>
 
 
 
-         <li class="dropdown">
-          <a href="pages/help.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> How you can help us <span class="caret"></span></a>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> How you can help us <span class="caret"></span></a>
             <ul class = "dropdown-menu">
               <li><a href="../pages/donations.html"> Donate </a></li>
               <li><a href="../pages/volunteer.html"> Volunteer </a></li>
               <li><a href="../pages/shop.html"> Shop </a></li>
               </ul>
           </li>
-        <li><a href=../pages/news.html>News</a></li>
+
+        <li><a href="../pages/news.html">News</a></li>
       </ul>  
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
+        <li><a href="../pages/contact.html">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
+
       </ul>
     </div>
   </div>
 </div>
-</div>
+
 
 <div class = "container">
  <button class="escape" id="escape">Quickly leave this page</button>
@@ -95,10 +101,10 @@
 
 <footer class="footer">
   <div class="container">
-    <p class> Sistah Space is...</p>
-    <p> next line </p>
-    <p> next line</p>
-    <p> next line</p>
+    <p class = "text-right"><strong>Sistah Space 2016</strong></p>
+    <p class = "text-right"> Sistah Space is a community based initiative that supports African heritage women and girls. </p>
+    <p class = "text-right"> We work with our local community and services to raise awareness of domestic and sexual abuse. </p>
+    <p>  </p>
   </div>
 </footer>
 
