--- a/pages/our_work.html
+++ b/pages/our_work.html
@@ -24,7 +24,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a href="../index.html" class="navbar-brand"> Home</a>
+        <a href="../index.html" class="navbar-brand"> Home Page</a>
       </div>
 
     <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -128,6 +128,15 @@
 
 
 </div>
+
+<footer class="footer">
+  <div class="container">
+    <p class = "text-right"><strong>Sistah Space 2016</strong></p>
+    <p class = "text-right"> Sistah Space is a community based initiative that supports African heritage women and girls. </p>
+    <p class = "text-right"> We work with our local community and services to raise awareness of domestic and sexual abuse. </p>
+    <p>  </p>
+  </div>
+</footer>
 
 </body>
 
