--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="index.html" class="navbar-brand"> LOGO here</a>
+      <a href="index.html" class="navbar-brand"> Sistah Space</a>
     </div>
 
     <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -95,7 +95,7 @@
   <div class="carousel-inner" role="listbox">
     <div class="item active">
       <img src="images/1.JPG" alt="picture">
-      <div class = "carousel-caption yellow">
+      <div class = "carousel-caption">
         <h2> Welcome to Sistah Space!</h2>
       </div>
     </div>
@@ -155,43 +155,48 @@
 </div>
 </div>
 
-<br>
+
 <div class = "container container-main">
+  <div class = "row mobile-only">
+    <div class = "container">
+        <h2 class = "text-center"> Welcome to Sistah Space! </h2>
+        <p class = "text-justify"> Sistah Space is a community based initiative that supports African heritage women and girls.</p>
+        <p class = "text-justify"> Founded in October/Novermber 2015, Sistah Space was created to bridge the gap in domestic abuse services for grassroots and all other African heritage women and girls. </p>
+        <p class = "text-justify" > We work with our local community and services to raise awareness of domestic and sexual abuse.  </p>
+      
+    </div>
+  </div>
+
+
+
   <div class="row">
     <div class="col-sm-6 " id ="our-journey">
-            <div class='inner-column'>
-      <div id="col">
+      <div class='inner-column'>
 
-      <h2 class = "text-justify">Why Sistah Space?</h2>
+        <h2 class = "text-justify">Why Sistah Space?</h2>
 
-      <p class="text-justify">Valerie Forde and her 22-month old daughter were viciously <a href="http://www.bbc.co.uk/news/uk-england-london-36562028"> murdered </a> by Valerie's ex-partner (also the baby's father) in 2014. This tragic event, which highlighted the need for an organisation to tackle domestic abuse in African heritage families, was the catalyst for Sistah Space.
+        <p class="text-justify">Valerie Forde and her 22-month old daughter were viciously <a href="http://www.bbc.co.uk/news/uk-england-london-36562028"> murdered </a> by Valerie's ex-partner (also the baby's father) in 2014. This tragic event, which highlighted the need for an organisation to tackle domestic abuse in African heritage families, was the catalyst for Sistah Space.
 
- </p>
+        </p>
 
-    <p class="text-justify">Alongside expertise in domestic abuse services, Sistah Space understands the specific needs of African heritage families. This means we can provide a 'safe' space for anyone who is concerned about domestic abuse. </p>
-     <p> Find out more <a href="x"> about us. </a> </p>
+        <p class="text-justify">Alongside expertise in domestic abuse services, Sistah Space understands the specific needs of African heritage families. This means we can provide a 'safe' space for anyone who is concerned about domestic abuse. </p>
+        <p> Find out more <a href="x"> about us. </a> </p>
 
-<h3 class="text-justify inner-padding"> How we can help </h3>
-  <p class="text-justify"> We can <a href="x"> help you </a> or explain what to look out for if you are worried about someone else.</p>
+        <h3 class="text-justify inner-padding"> How we can help </h3>
+        <p class="text-justify"> We can <a href="x"> help you </a> or explain what to look out for if you are worried about someone else.</p>
 
-<h3 class="text-justify"> The team</h3>
-  <p class="text-justify"> Meet <a href="x">the team </a> and find out what we've achieved by working with the African heritage community.</p>
-
-</div>
-</div>
-
-
-</br>
-<div class = "container">
-
+        <h3 class="text-justify"> The team</h3>
+        <p class="text-justify"> Meet <a href="x">the team </a> and find out what we've achieved by working with the African heritage community.</p>
+      </div>
+    </div>
 
 
     <div class = "col-sm-6 picture-holder">
-
-
-
+      <img class="valerie" src= "images/valerie.jpg" alt="Picutre of Valerie F.">
+        <img src="images/logo.jpg" alt="picture">
+      <
     </div>
-
+  </div>
  
 
   <div class = "row">
@@ -274,10 +279,10 @@
 
 <footer class="footer">
   <div class="container">
-    <p class>Place sticky footer content here.</p>
-    <p> next line </p>
-    <p> next line</p>
-    <p> next line</p>
+    <p class = "text-right"><strong>Sistah Space 2016</strong></p>
+    <p class = "text-right"> Sistah Space is a community based initiative that supports African heritage women and girls. </p>
+    <p class = "text-right"> We work with our local community and services to raise awareness of domestic and sexual abuse. </p>
+    <p>  </p>
   </div>
 </footer>
 
