--- a/pages/our_team.html
+++ b/pages/our_team.html
@@ -23,7 +23,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="../index.html" class="navbar-brand"> LOGO here</a>
+      <a href="../index.html" class="navbar-brand"> Home Page</a>
     </div>
 
     <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -78,10 +78,10 @@
 
 <footer class="footer">
   <div class="container">
-    <p class> Sistah Space is...</p>
-    <p> next line </p>
-    <p> next line</p>
-    <p> next line</p>
+    <p class = "text-right"><strong>Sistah Space 2016</strong></p>
+    <p class = "text-right"> Sistah Space is a community based initiative that supports African heritage women and girls. </p>
+    <p class = "text-right"> We work with our local community and services to raise awareness of domestic and sexual abuse. </p>
+    <p>  </p>
   </div>
 </footer>
 
