small extra changes

--- a/index.html
+++ b/index.html
@@ -191,30 +191,15 @@
     </div>
 
 
-    <div class = "col-sm-6 picture-holder">
-      <img class="valerie" src= "images/valerie.jpg" alt="Picutre of Valerie F.">
-        <img src="images/logo.jpg" alt="picture">
+    <div class = "col-sm-6 ">
+      <img class="valerie picture-holder" src= "images/valerie.jpg" alt="Picutre of Valerie F.">
+        <img src="images/logo.jpg" alt="picture"> 
+         <h2> Social media stream </h2>
       <
     </div>
   </div>
  
-
-  <div class = "row">
-    <div class ="col-sm-6 ">
-      <h2> Social media stream </h2>
-
-    </div>
-
-    <div class ="col-sm-6">
-
-   <h2>   Some content </h2>
-
-      </div>
-    </div>
-  </div>
-</div> <!--ends container -->
-</div>
-
+  
 </hr>
 
 <div class = "container" >
@@ -229,7 +214,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-4 m-b-lg">
+      <div class="col-sm-4 ">
         <div class="panel panel-default panel-profile m-b-0">
           <div class="panel-heading green"></div>
           <div class="panel-body text-center">
@@ -241,8 +226,9 @@
             </a>
           </div>
         </div>
+
       </div>
-      <div class="col-sm-4 m-b-lg">
+      <div class="col-sm-4 ">
         <div class="panel panel-default panel-profile m-b-0">
           <div class="panel-heading yellow" ></div>
           <div class="panel-body text-center">
@@ -254,8 +240,9 @@
             </a>
           </div>
         </div>
+       
       </div>
-      <div class="col-sm-4 m-b-lg">
+      <div class="col-sm-4 ">
         <div class="panel panel-default panel-profile m-b-0">
           <div class="panel-heading red" ></div>
           <div class="panel-body text-center">
@@ -272,7 +259,7 @@
   </div>
 </div>
 </div>
-
+  
   </div>
 </div> <!--ends container -->
 </div>
