--- a/pages/our_team.html
+++ b/pages/our_team.html
@@ -65,6 +65,28 @@
 </div>
 </div>
 
+<div class = "jumbotron">
+  <div class = "container">
+
+    <img class = "img-responsive" src="../images/3.JPG" alt="picture">
+      <div class ="text-area">
+        </br>
+        <h2 class = " text-center"> Sistah Space is staffed by volunteers who devote their time to provide the community with support.</h2>   <hr>
+        <h4 class = " text-center">  </h4> </br>
+      </div>
+  </div>
+</div>
+
+
+  <div class="container">
+    <div class="main-copy">
+
+
+<h2> Our team</h2>
+
+<p class="text-align">Lorem ipsum dolor sit amet, volutpat nam cursus in dictum sed, urna ultrices donec imperdiet ultrices dolor tincidunt, convallis wisi a ornare et, mauris nam urna nunc arcu ut. Sit ridiculus accumsan sed lorem feugiat, leo mi eiusmod, ultricies cum sit. Tempor sed sit, risus purus suscipit, vivamus sollicitudin.</p>
+<p class="text-align"> Ut nulla, class fermentum vitae blandit erat in, cursus suspendisse, non vel in imperdiet justo at. Vehicula felis curabitur viverra pellentesque tempus, velit eu justo dapibus ipsum ultrices congue, ut nec fusce suscipit ipsum fames adipiscing, integer el. Often there are warning signs, but sometimes there are none. </p>
+
 <div class = "container">
  <button class="escape" id="escape">Quickly leave this page</button>
   <div class="social">
@@ -75,6 +97,9 @@
 
   <p> Content </p>  
 </div>
+</div>
+</div>
+
 
 <footer class="footer">
   <div class="container">
@@ -84,6 +109,7 @@
     <p>  </p>
   </div>
 </footer>
+
 
 
 <script>
