--- a/pages/our_work.html
+++ b/pages/our_work.html
@@ -249,6 +249,15 @@ How do you think this would impact on an African heritage woman who has been mov
 </footer>
 
 
+<footer class="footer">
+  <div class="container">
+    <p class = "text-right"><strong>Sistah Space 2016</strong></p>
+    <p class = "text-right"> Sistah Space is a community based initiative that supports African heritage women and girls. </p>
+    <p class = "text-right"> We work with our local community and services to raise awareness of domestic and sexual abuse. </p>
+    <p>  </p>
+  </div>
+</footer>
+
 </body>
 
 </html>
