--- a/pages/sanctuary.html
+++ b/pages/sanctuary.html
@@ -72,6 +72,43 @@
   </div>
 </footer>
 
+
+<div class = "jumbotron">
+  <div class = "container">
+
+
+
+    <img class = "img-responsive" src="../images/3.JPG" alt="picture">
+      <div class ="text-area">
+        </br>
+        <h2 class = " text-center"> Sistah Space is a sanctuary for survivors of domestic abuse.</h2> <hr>
+        <h4 class=" text-center emphasise"> We provide immediate support .... </h4> <h4 class ="text-center">The answer is simple.</h4> <h4 class = "text-center"> ... </h4><br>
+      </div>
+      </div>
+      </div>
+
+  <div class="container ">
+    <div class=" main-copy">
+  <h2 >Help us by donating</h2>
+
+<p class= "text-justify">Content ContentContent Content Content Content Content Content  </p>
+
+
+<p class= "text-justify">ContentConte ntContentConten tConten tContentConte ntContent </p>
+
+
+</div>
+</div>
+
+
+<footer class="footer">
+  <div class="container">
+    <p class = "text-right"><strong>Sistah Space 2016</strong></p>
+    <p class = "text-right"> Sistah Space is a community based initiative that supports African heritage women and girls. </p>
+    <p class = "text-right"> We work with our local community and services to raise awareness of domestic and sexual abuse. </p>
+    <p>  </p>
+  </div>
+</footer>
 </body>
 
 
