images and index updates

--- a/pages/abuse.html
+++ b/pages/abuse.html
@@ -79,8 +79,12 @@
 
 
 <div class = "jumbotron">
-  <div class = "container">
+ <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
+    <div class="social">
 
+      <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
+      <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
+    </div>
     <img class = "img-responsive" src="../images/3.JPG" alt="picture">
       <div class ="text-area">
         </br>
@@ -88,7 +92,6 @@
         <h4 class = " text-center">  Many more are left with life changing injuries.</h4> </br>
       </div>
   </div>
-</div>
 
 
   <div class="container">
