--- a/pages/history.html
+++ b/pages/history.html
@@ -1,5 +1,4 @@
-<<<<<<< HEAD
-=======
+
 <html DOCTYPE!>
 <html>
 
@@ -79,13 +78,19 @@
 
 
 <div class = "jumbotron">
-  <div class = "container">
         
-    <img class = "img-responsive" src="../images/2.JPG" alt="picture">
+  
 
+ <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
+    <div class="social">
+
+      <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
+      <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
+    </div>
+
+  <img class = "img-responsive" src="../images/2.JPG" alt="picture">
 
   </div>
-</div>
 
 <div class = "container main-copy">
 
@@ -125,4 +130,3 @@
 
 </body>
 </html>
->>>>>>> master
