--- a/pages/our_team.html
+++ b/pages/our_team.html
@@ -67,8 +67,12 @@
 </div>
 
 <div class = "jumbotron">
-  <div class = "container">
+ <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
+    <div class="social">
 
+      <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
+      <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
+    </div>
     <img class = "img-responsive" src="../images/3.JPG" alt="picture">
       <div class ="text-area">
         </br>
@@ -76,7 +80,6 @@
         <h4 class = " text-center">  </h4> </br>
       </div>
   </div>
-</div>
 
 
   <div class="container">
@@ -88,13 +91,7 @@
 <p class="text-align">Lorem ipsum dolor sit amet, volutpat nam cursus in dictum sed, urna ultrices donec imperdiet ultrices dolor tincidunt, convallis wisi a ornare et, mauris nam urna nunc arcu ut. Sit ridiculus accumsan sed lorem feugiat, leo mi eiusmod, ultricies cum sit. Tempor sed sit, risus purus suscipit, vivamus sollicitudin.</p>
 <p class="text-align"> Ut nulla, class fermentum vitae blandit erat in, cursus suspendisse, non vel in imperdiet justo at. Vehicula felis curabitur viverra pellentesque tempus, velit eu justo dapibus ipsum ultrices congue, ut nec fusce suscipit ipsum fames adipiscing, integer el. Often there are warning signs, but sometimes there are none. </p>
 
-<div class = "container">
- <button class="escape" id="escape">Quickly leave this page</button>
-  <div class="social">
-    
-    <a href=""  > <button class="btn-social" id="facebook">Facebook </button></a>
-    <a href=""  > <button class="btn-social" id="twitter">  Twitter</button></a>
-  </div>
+
 
   <p> Content </p>  
 </div>
