--- a/pages/sanctuary.html
+++ b/pages/sanctuary.html
@@ -67,27 +67,27 @@
 
 
 <div class = "jumbotron">
-  <div class = "container">
+ <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
+    <div class="social">
 
+      <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
+      <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
+    </div>
 
 
     <img class = "img-responsive" src="../images/3.JPG" alt="picture">
       <div class ="text-area">
         </br>
         <h2 class = " text-center"> Sistah Space is a sanctuary for survivors of domestic abuse.</h2> <hr>
-        <h4 class=" text-center emphasise"> We provide immediate support .... </h4> <h4 class ="text-center">The answer is simple.</h4> <h4 class = "text-center"> ... </h4><br>
-      </div>
+        <h4 class=" text-center emphasise"> We provide immediate support and work with community to raise awareness of abuse.  </h4> <h4 class ="text-center"></h4> <h4 class = "text-center"> </h4><br>
       </div>
       </div>
 
   <div class="container ">
     <div class=" main-copy">
-  <h2 >Help us by donating</h2>
+  <h2 >Sistah Space</h2>
+  <p> Sistah Space is a safe space in our community where surviours of domestic violence and abuse can receive help and support.</p>
 
-<p class= "text-justify">Content ContentContent Content Content Content Content Content  </p>
-
-
-<p class= "text-justify">ContentConte ntContentConten tConten tContentConte ntContent </p>
 
 
 </div>
