--- a/pages/donations.html
+++ b/pages/donations.html
@@ -69,8 +69,12 @@
 
  
 <div class = "jumbotron">
-  <div class = "container">
+ <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
+    <div class="social">
 
+      <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
+      <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
+    </div>
     <img class = "img-responsive" src="../images/3.JPG" alt="picture">
       <div class ="text-area">
         </br>
@@ -78,7 +82,6 @@
         <h4 class=" text-center emphasise"> You may ask why we need a domestic abuse organisation specifcally for African heritage people. </h4> <h4 class ="text-center">The answer is simple.</h4> <h4 class = "text-center"> The current system does not understand or cater for the needs of this community. </h4><br>
       </div>
   </div>
-</div>
 
 <div class="container">
   <div class="main-copy">
