--- a/pages/news.html
+++ b/pages/news.html
@@ -87,13 +87,12 @@
 </div>
 
 
-<div class = "container">
- <button class="escape" id="escape">Quickly leave this page</button>
-  <div class="social">
-    
-    <a href=""  > <button class="btn-social" id="facebook">Facebook </button></a>
-    <a href=""  > <button class="btn-social" id="twitter">  Twitter</button></a>
-  </div>
+ <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
+    <div class="social">
+
+      <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
+      <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
+    </div>
 
   <p> Content </p>  
   <h1> Content </h1>
