--- a/pages/our_work.html
+++ b/pages/our_work.html
@@ -71,7 +71,12 @@
 
 
 <div class = "jumbotron">
-  <div class = "container">
+  <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
+    <div class="social">
+
+      <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
+      <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
+    </div>
 
     <img class = "img-responsive" src="../images/3.JPG" alt="picture">
       <div class ="text-area">
@@ -100,7 +105,7 @@
 
     <div class = "row">
       <div class = "col-sm-4">
-      picture
+         <img src="../images/portrait.jpg" class = "portrait">
       </div>
       <div class = "col-sm-8">
     <blockquote> <p class="text-justify">"I have re-coined the phrase 'Honour' based violence to 'Dishonour' based violence to describe the feelings in the grassroots community. This is because there is some similarity to the fact that in certain communities, the worst thing you can do is report a black man to the police. The grassroots/Rasta community in particular, for historical reasons, are not in favour of that. We are often taught from a young age to keep personal things private and within the family." </p></blockquote>
