news section added on index.html

--- a/pages/advice.html
+++ b/pages/advice.html
@@ -56,7 +56,7 @@
               <li><a href="../pages/shop.html"> Shop </a></li>
               </ul>
           </li>
-        <li><a href=pages/news.html>News</a></li>
+        <li><a href="../pages/news.html">News</a></li>
       </ul>  
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
@@ -66,15 +66,32 @@
 </div>
 </div>
 
-<div class = "container">
- <button class="escape" id="escape">Quickly leave this page</button>
-  <div class="social">
-    
-    <a href=""  > <button class="btn-social" id="facebook">Facebook </button></a>
-    <a href=""  > <button class="btn-social" id="twitter">  Twitter</button></a>
-  </div>
+<div class = "jumbotron">
+ <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
+    <div class="social">
 
-  <p> Content </p>  
+      <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
+      <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
+    </div>
+
+
+    <img class = "img-responsive" src="../images/3.JPG" alt="picture">
+      <div class ="text-area">
+        </br>
+        <h2 class = " text-center"> Sistah Space is a sanctuary for survivors of domestic abuse.</h2> <hr>
+        <h4 class=" text-center emphasise"> We provide immediate support and work with community to raise awareness of abuse.  </h4> <h4 class ="text-center"></h4> <h4 class = "text-center"> </h4><br>
+      </div>
+      </div>
+
+  <div class="container ">
+    <div class=" main-copy">
+  <h2 >Sistah Space</h2>
+  <p> Sistah Space is a safe space in our community where surviours of domestic violence and abuse can receive help and support their need.</p>
+    <p> Although Sistah Spaces caters mainly for Black heritage women we offer our help to .</p>
+
+
+
+</div>
 </div>
 
 <footer class="footer">
