--- a/pages/sanctuary.html
+++ b/pages/sanctuary.html
@@ -55,7 +55,7 @@
               <li><a href="../pages/shop.html"> Shop </a></li>
               </ul>
           </li>
-        <li><a href=pages/news.html>News</a></li>
+        <li><a href="../pages/news.html">News</a></li>
       </ul>  
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
@@ -86,7 +86,8 @@
   <div class="container ">
     <div class=" main-copy">
   <h2 >Sistah Space</h2>
-  <p> Sistah Space is a safe space in our community where surviours of domestic violence and abuse can receive help and support.</p>
+  <p> Sistah Space is a safe space in our community where surviours of domestic violence and abuse can receive help and support their need.</p>
+    <p> Although Sistah Spaces caters mainly for Black heritage women we offer our help to .</p>
 
 
 
