--- a/pages/shop.html
+++ b/pages/shop.html
@@ -66,15 +66,70 @@
 </div>
 </div>
 
-<div class = "container">
- <button class="escape" id="escape">Quickly leave this page</button>
-  <div class="social">
-    
-    <a href=""  > <button class="btn-social" id="facebook">Facebook </button></a>
-    <a href=""  > <button class="btn-social" id="twitter">  Twitter</button></a>
-  </div>
+<div class = "jumbotron">
+ <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
+    <div class="social">
 
-  <p> Content </p>  
+      <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
+      <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
+    </div>
+
+
+    <img class = "img-responsive" src="../images/2.JPG" alt="picture">
+      <div class ="text-area">
+        </br>
+        <h2 class = " text-center"> Shop at Sistah Space.</h2> <hr>
+        <h4 class=" text-center emphasise"> At Sistah Space we run a pop up shop to raise funds for our activities.  </h4> <h4 class ="text-center"></h4> <h4 class = "text-center"> </h4><br>
+      </div>
+      </div>
+
+  <div class="container ">
+    <div class=" main-copy">
+
+  <h1> Shop at Sistah Space </h1>
+  <p> At Sistah Space we run a shop to raise funds for our activities. We sell donated items and organise cake sales to raise fund for our activities.</p>  
+ 
+  <div class="row">
+    <div class="col-md-5">
+      <img class="img-responsive" id="shop1" src="../images/shop1.jpg">
+    </div>
+    <div class="col-md-7 yellow">
+      <h4> Title </h4>
+      <p> Content </p>
+    </div>
+</div>  
+
+<hr>  
+
+ <div class="row">
+    <div class="col-md-5">  
+      <img class="img-responsive" src="../images/shop 3.JPG">
+    </div>
+<div class="col-md-7 yellow">
+      <h4> Survivor dolls </h4>
+      <p> Content </p>
+    </div>
+</div> 
+
+<hr>
+
+ <div class="row">
+    <div class="col-md-5">  
+      <img class="img-responsive" src="../images/watch2.JPG">
+    </div>
+<div class="col-md-7 yellow">
+      <h4> Mosaique Watches </h4>
+      <p> Content </p>
+    </div>
+</div> 
+
+
+
+
+
+
+<hr>
+</div>
 </div>
 
 <footer class="footer">
