--- a/pages/our_team.html
+++ b/pages/our_team.html
@@ -56,7 +56,7 @@
               <li><a href="../pages/shop.html"> Shop </a></li>
               </ul>
           </li>
-        <li><a href=pages/news.html>News</a></li>
+        <li><a href="../pages/news.html">News</a></li>
       </ul>  
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
@@ -88,14 +88,59 @@
 
 <h2> Our team</h2>
 
-<p class="text-align">Lorem ipsum dolor sit amet, volutpat nam cursus in dictum sed, urna ultrices donec imperdiet ultrices dolor tincidunt, convallis wisi a ornare et, mauris nam urna nunc arcu ut. Sit ridiculus accumsan sed lorem feugiat, leo mi eiusmod, ultricies cum sit. Tempor sed sit, risus purus suscipit, vivamus sollicitudin.</p>
-<p class="text-align"> Ut nulla, class fermentum vitae blandit erat in, cursus suspendisse, non vel in imperdiet justo at. Vehicula felis curabitur viverra pellentesque tempus, velit eu justo dapibus ipsum ultrices congue, ut nec fusce suscipit ipsum fames adipiscing, integer el. Often there are warning signs, but sometimes there are none. </p>
+<h1>Ngozi Fulani</h1> (CEO, IDVA, ISVA, Housekeeping)
+<p>Ngozi is the founder member of Sistah Space & is the senior member of staff in charge of day to day running. Ngozi qualified as an Independent Domestic Violence Advisor (IDVA) & an Independent Sexual Violence Advisor (ISVA). Ngozi handles all the case studies and one to one surgeries. </p>
+
+<h2>Management Committee Members</h2>
+<h3>Maxine Claye, Management Committee Member (Chair)</h3>
+<p>Maxine is the founder of A Darker Shade, the unregistered charity outlet store that works very closely with Sistah Space.</p>
+<p>Maxine is in charge of the retail arm of Sistah Space.</p>
+
+<h3>Sistah Joseph</h3>
+<p>Management Commmitee Member (Housekeeping) & volunteer<p>
+<p>Sistah Joseph is tasked with making sure that service users and vistors alike are comfortable, cared for and otherwise refreshed, at Sistah Space.</p>
+
+<h3>Aaron Tanice Management Committee (Treasurer)</h3>
+<p>Aaron is one of our inhouse volunteers with a responsibility for safety of service users, staff and volunteers.</p>
+<p>Aaron holds a counselling degree and is one of the Sistah Space advisor in that regard.</p>
+
+<h3>Cynthia Oliver Management Committee (Secretary)</h3>
+
+<h3>Wendella B.</h3>
+<p>Management Committee Member (Housekeeping, volunteer)</p>
+
+<h2>External support:</h2>
+
+<h4>Hackney CVS (Support)</h4>
+
+<h4>Carrise Forde (Sistah Space Ambassador)</h4>
+
+<h4>Djan Headley (Sistah Space youth Ambassador & workshop volunteer)</h4>
+
+<h4>Hugh Brown (Transport)</h4>
+
+<h4>Izabela Jelonek (Web design/media)</h4>
+
+<h4>Rosanna Muatta (occasional fundraising)</h4>
+
+<h4>Yvonne Williams (Management Commitee Member)</h4>
+
+<h4>Yvonne William (Finance Volunteer)</h4>
+
+In loving memory of Valerie Forde & baby Real-Jahzara
 
 
 
-  <p> Content </p>  
+<p class="text-align"> </p>
+<p class="text-align"> </p>
+
+
+
+
 </div>
+<hr>
 </div>
+
 </div>
 
 
