updates to landing page

--- a/pages/our_work.html
+++ b/pages/our_work.html
@@ -58,8 +58,7 @@
               </ul>
           </li>
 
-        <li><a href="../pages/news.html">News</a></li>
-      </ul>
+            </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="../pages/contact.html">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li>
 
@@ -82,7 +81,7 @@
       <div class ="text-area">
         </br>
         <h2 class = " text-center"> A domestic abuse organisation for African heritage people</h2> <hr>
-        <h4 class=" text-center emphasise"> You may ask why we need a domestic abuse organisation specifcally for African heritage people. </h4> <h4 class ="text-center">The answer is simple.</h4> <h4 class = "text-center"> The current system does not understand or cater for the needs of this community. </h4><br>
+        <h4 class=" text-center "> You may ask why we need a domestic abuse organisation specifcally for African heritage people. </h4> <h4 class ="text-center">The answer is simple.</h4> <h4 class = "text-center"> The current system does not understand or cater for the needs of this community. </h4><br>
       </div>
   </div>
 </div>
@@ -129,7 +128,7 @@
     <p class="text-justify">We remain victims of blatant racism and unconscious bias in institutions where racism is inherent. We do know that things are changing for the better, but in the meantime, people are dying and still refusing to report to institutions because of fear.</p>
 
 </div>
-
+<hr>
 
 
 
