contact form added

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
             <li><a href="pages/shop.html"> Shop </a></li>
           </ul>
         </li>
+        <li><a href="pages/news.html">News</a></li>
 
         
       </ul>  
@@ -217,7 +218,7 @@
       <li>insert a zip</li>
       <li>pockets</li>
       <li>hand sewing</li>
-      <li>make a garment.</li>
+      <li>make a garment.</li></ul>
       ...and much more.
       Brothas welcome.
       Please bring your own fabric.
