--- a/pages/news.html
+++ b/pages/news.html
@@ -70,17 +70,53 @@
 </div>
 
 
+<div class = "jumbotron">
  <button class="escape" id="escape">QUICKLY LEAVE THIS PAGE.</button>
     <div class="social">
 
       <a href="https://www.facebook.com/Sistah-SPACE-Against-Domestic-Abuse-1655536731379576/?fref=ts&ref=br_tf&qsefr=1"  target ="_blank"> <button class="btn-social facebook" >Facebook </button></a>
       <a href="https://twitter.com/sistah_space target ="_blank""  > <button class="btn-social twitter">   Twitter</button></a>
     </div>
+    
+      <div class ="text-area">
+        </br>
+        <h1 class = " text-center"> Sistah Space news</h1>   <hr>
+  
+      </div>
+  </div>
 
-  <p> Content </p>  
-  <h1> Content </h1>
+<div class ="container">
+
+  <div class ="row">
+    <div class = "col-md-8">
+      <h3> News item </h3>
+      <h4>BEGINNERS / INTERMEDIATE SEWING CLASS </h4>
+      <p>Thursday evening 7-9pm (enrolment and refreshments 6.30pm) With Ms Djanomi
+      SISTAH SPACE 243 LOWER CLAPTON ROAD, E5 8EG
+      £5 per hour x 2 hours (sign up for the 6 weeks course and 1 double session is free)
+      LEARN TO....
+      <ul><li>use a sewing machine</li>
+      <li>insert a zip</li>
+      <li>pockets</li>
+      <li>hand sewing</li>
+      <li>make a garment.</li></ul>
+      ...and much more.
+      Brothas welcome.
+      Please bring your own fabric.
+      Sorry we can not accommodate young children (under 10 yrs) on the premises during workshops.</p>
+
+
+    </div>
+
+    <div class = "col-md-4">
+          <img class="img-responsive" src="../images/sewing_class.jpg">
 
 </div>
+</div>
+<hr>
+
+</div>
+
 
 <footer class="footer">
   <div class="container">
