--- a/pages/abuse.html
+++ b/pages/abuse.html
@@ -56,13 +56,11 @@
               <li><a href="../pages/shop.html"> Shop </a></li>
               </ul>
           </li>
-<<<<<<< HEAD
         <li><a href="../pages/news.html">News</a></li>
-=======
->>>>>>> master
+
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li>
+        <li><a href="../pages/contact.html">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li>
       </ul>
     </div>
   </div>
@@ -70,6 +68,7 @@
 </div>
 
 <!-- <div class = "container">
+
  <button class="escape" id="escape">Quickly leave this page</button>
   <div class="social">
 
