news section updates

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <ul class="dropdown-menu">
             <li><a href="pages/our_work.html">Why Sistah Space?</a></li>
             <li><a href="pages/abuse.html">What is abuse?</a></li>
-            <li><a href="pages/our_team.html">What we do?</a></li> 
+            <li><a href="pages/our_team.html">Who are we?</a></li> 
             <li><a href="pages/history.html">Background history</a></li>
           </ul>
         </li>
@@ -203,39 +203,45 @@
   </div>
 <hr>  
 
-<div class ="container">
+<div class ="container yellow">
 
-  <div class ="row">
     <h3 class="text-center"> News </h3>
+      <div class ="row" >
+      	<h4 class = "text-center">  As part of a newly funded partnership, Sistah Space will be launching as part of Hackney Women's Haven. </h4> 
+      	<h4 class = "text-center"> <b>8th of October at Claudia Jones Organisation, 8 Palatine Road, Stoke Newington N16 8SX. 2pm-7pm. </b> </h4>
+      </div>
+      <br>
+</div>
+
     <div class = "col-md-8">
-      <h3> News item </h3>
-      <h4>BEGINNERS / INTERMEDIATE SEWING CLASS </h4>
-      <p>Thursday evening 7-9pm (enrolment and refreshments 6.30pm) With Ms Djanomi
-      SISTAH SPACE 243 LOWER CLAPTON ROAD, E5 8EG
-      £5 per hour x 2 hours (sign up for the 6 weeks course and 1 double session is free)
-      LEARN TO....
+      
+      <h3>BEGINNERS / INTERMEDIATE SEWING CLASS </h3>
+      <p>Thursday evening 7 - 9pm (enrolment and refreshments 6.30pm) with <b> Ms Djanomi</b></p>
+      <p><b>Venue:</b> SISTAH SPACE 243 LOWER CLAPTON ROAD, E5 8EG
+      <p><b>Cost: </b>&pound5 per hour x 2 hours (sign up for the 6 weeks course and 1 double session is free) </p>
+      <p><b><u>LEARN TO....</u></b>
       <ul><li>use a sewing machine</li>
       <li>insert a zip</li>
       <li>pockets</li>
       <li>hand sewing</li>
       <li>make a garment.</li></ul>
-      ...and much more.
-      Brothas welcome.
-      Please bring your own fabric.
-      Sorry we can not accommodate young children (under 10 yrs) on the premises during workshops.
+      ...and much more.<p><br>
+      <i><p>Brothas welcome.</p>
+      <p>Please bring your own fabric.</p>
+      <p>Sorry we can not accommodate young children (under 10 yrs) on the premises during workshops.</p></i>
 
+ </div>
+<div class = "container">
 
-
-
-    </div>
+   
     <div class = "col-md-4">
-      <h3> picture holder </h3>
-      <img class="img-responsive" src="images/sewing_class.jpg">
+      <img class="img-responsive news-pic" src="images/sewing_class.jpg">
       
+    </div>
     </div>
     <a href="pages/news.html"><p class="text-center">Click here to view more news strories...</p></a>
   </div>
-</div>
+
   
 <hr>
 
