--- a/pages/contact.html
+++ b/pages/contact.html
@@ -44,7 +44,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="" class="navbar-brand"> Home Page</a>
+      <a href="../index.html" class="navbar-brand"> Home Page</a>
     </div>
 
     <div class="collapse navbar-collapse" id="navbar-collapse">
@@ -52,10 +52,10 @@
         <li class = "dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">about Sistah Space <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="../pages/our_work.html">Our work</a></li>
-            <li><a href="../pages/our_team.html">Our Team</a></li>
+            <li><a href="../pages/our_work.html">Why Sistah Space?</a></li>
             <li><a href="../pages/abuse.html">What is abuse?</a></li>
-            <li><a href="#">Page 4</a></li>
+            <li><a href="../pages/our_team.html">Who are we?</a></li> 
+            <li><a href="../pages/history.html">Background history</a></li> 
           </ul>
         </li>      
         <li class = "dropdown">
@@ -63,27 +63,26 @@
             <ul class = "dropdown-menu">  
               <li><a href="../pages/advice.html"> Advice </a></li>
               <li><a href="../pages/sanctuary.html"> Sistah Space Sanctuary </a></li>
-              <li><a href="#"> Page 3 </a></li>
             </ul>
           </li>
 
 
 
         <li class="dropdown">
-          <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> How you can help us <span class="caret"></span></a>
+          <a href="pages/help.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> How you can help us <span class="caret"></span></a>
             <ul class = "dropdown-menu">
               <li><a href="../pages/donations.html"> Donate </a></li>
               <li><a href="../pages/volunteer.html"> Volunteer </a></li>
               <li><a href="../pages/shop.html"> Shop </a></li>
               </ul>
           </li>
+               <li><a href="../pages/news.html">News</a></li>
       </ul>  
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="../pages/contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
+        <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
       </ul>
     </div>
   </div>
-</div>
 </div>
 
 <div class = "jumbotron">
