--- a/pages/donations.html
+++ b/pages/donations.html
@@ -34,7 +34,7 @@
           <ul class="dropdown-menu">
             <li><a href="../pages/our_work.html">Why Sistah Space?</a></li>
             <li><a href="../pages/abuse.html">What is abuse?</a></li>
-            <li><a href="../pages/our_team.html">What we do?</a></li> 
+            <li><a href="../pages/our_team.html">Who are we?</a></li> 
             <li><a href="../pages/history.html">Background history</a></li>
           </ul>
         </li>
@@ -56,7 +56,7 @@
               <li><a href="../pages/shop.html"> Shop </a></li>
               </ul>
           </li>
-
+     <li><a href="../pages/news.html">News</a></li>
       </ul>  
       <ul class="nav navbar-nav navbar-right">
         <li><a href="../pages/contact.html">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
@@ -81,7 +81,7 @@
         <h4 class=" text-center emphasise"> You may ask why we need a domestic abuse organisation specifcally for African heritage people. </h4> <h4 class ="text-center">The answer is simple.</h4> <h4 class = "text-center"> The current system does not understand or cater for the needs of this community. </h4><br>
       </div>
   </div>
-q
+
 <div class="container">
   <div class="main-copy">
   <h2 >Help us by donating</h2>
@@ -92,8 +92,8 @@ q
 <p class= "text-justify">Your donations help us provide practical support and assist us with utility bills, travel, venue costs and providing essential refreshments for survivors and volunteers. Your donations also means we can organise residential visits and days out for those in need of respite. The money you help us raise means that we can continue to help those vulnerable victims that are often suffering in silence. </p>
 
 
-<a href = "http://uk.virginmoneygiving.com/charity-web/charity/displayCharityCampaignPage.action?charityCampaignUrl=sistahspace" target="_blank"> Virgin Money Giving - fundraising site </a>
-
+<a href = " http://uk.virginmoneygiving.com/fund/sistahspace" target="_blank"> Virgin Money Giving - fundraising site </a>
+<hr>
 </div>
 </div>
 
