--- a/pages/our_work.html
+++ b/pages/our_work.html
@@ -57,7 +57,7 @@
               <li><a href="../pages/shop.html"> Shop </a></li>
               </ul>
           </li>
-
+          <li><a href="../pages/news.html">News</a></li>
             </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="../pages/contact.html">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li>
