--- a/pages/sanctuary.html
+++ b/pages/sanctuary.html
@@ -33,7 +33,7 @@
           <ul class="dropdown-menu">  
             <li><a href="../pages/our_work.html">Why Sistah Space?</a></li>
             <li><a href="../pages/abuse.html">What is abuse?</a></li>
-            <li><a href="../pages/our_team.html">What we do?</a></li> 
+            <li><a href="../pages/our_team.html">Who are we?</a></li> 
             <li><a href="../pages/history.html">Background history</a></li>  
           </ul>
         </li>      
