--- a/pages/our_team.html
+++ b/pages/our_team.html
@@ -34,7 +34,7 @@
           <ul class="dropdown-menu">
             <li><a href="../pages/our_work.html">Why Sistah Space?</a></li>
             <li><a href="../pages/abuse.html">What is abuse?</a></li>
-            <li><a href="../pages/our_team.html">What we do?</a></li> 
+            <li><a href="../pages/our_team.html">Who are we?</a></li> 
             <li><a href="../pages/history.html">Background history</a></li>
           </ul>
         </li>      
@@ -56,6 +56,7 @@
               <li><a href="../pages/shop.html"> Shop </a></li>
               </ul>
           </li>
+          
         <li><a href="../pages/news.html">News</a></li>
 
       </ul>  
