--- a/pages/shop.html
+++ b/pages/shop.html
@@ -34,7 +34,7 @@
           <ul class="dropdown-menu">
             <li><a href="../pages/our_work.html">Why Sistah Space?</a></li>
             <li><a href="../pages/abuse.html">What is abuse?</a></li>
-            <li><a href="../pages/our_team.html">What we do?</a></li> 
+            <li><a href="../pages/our_team.html">Who are we?</a></li> 
             <li><a href="../pages/history.html">Background history</a></li> 
           </ul>
         </li>      
@@ -56,6 +56,7 @@
               <li><a href="../pages/shop.html"> Shop </a></li>
               </ul>
           </li>
+               <li><a href="../pages/news.html">News</a></li>
       </ul>  
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#contact">Contact us <span class="glyphicon glyphicon-envelope"></span></a></li> 
@@ -77,7 +78,7 @@
     <img class = "img-responsive" src="../images/2.JPG" alt="picture">
       <div class ="text-area">
         </br>
-        <h2 class = " text-center"> Shop at Sistah Space.</h2> <hr>
+        <h1 class = " text-center"> Shop at Sistah Space.</h1> <hr>
         <h4 class=" text-center emphasise"> At Sistah Space we run a pop up shop to raise funds for our activities.  </h4> <h4 class ="text-center"></h4> <h4 class = "text-center"> </h4><br>
       </div>
       </div>
@@ -85,49 +86,47 @@
   <div class="container ">
     <div class=" main-copy">
 
-  <h1> Shop at Sistah Space </h1>
-  <p> At Sistah Space we run a shop to raise funds for our activities. We sell donated items and organise cake sales to raise fund for our activities.</p>  
+  
+  <p> At Sistah Space we run a shop to raise funds for our activities. We sell donated items and organise cake sales.</p>  
+  <p> We have a number of cultural, wellbeing books and CDs available. We also have a wide range of Survivor Dolls, watches and many other quality products. <p>
+  <a href= http://www.ebay.co.uk/usr/sistah-space target="-blank"><p> Visit our Ebay page!</p></a>
+
  
   <div class="row">
-    <div class="col-md-5">
+    <div class="col-xs-6">
       <img class="img-responsive" id="shop1" src="../images/shop1.jpg">
     </div>
-    <div class="col-md-7 yellow">
-      <h4> Title </h4>
-      <p> Content </p>
+    <div class="col-xs-6">
+      <img class="img-responsive" id="shop2" src="../images/SAM_2190.JPG">
     </div>
 </div>  
-
+<h3 class="text-center"> Cakes and donated items</h3>
 <hr>  
 
  <div class="row">
-    <div class="col-md-5">  
+    <div class="col-xs-6">  
       <img class="img-responsive" src="../images/shop 3.JPG">
     </div>
-<div class="col-md-7 yellow">
-      <h4> Survivor dolls </h4>
-      <p> Content </p>
+<div class="col-xs-6">
+     <img class="img-responsive" src="../images/SAM_2185.JPG">
+
     </div>
 </div> 
-
+<h3 class="text-center"> Handmade Survivior Dolls</h3>
 <hr>
 
  <div class="row">
-    <div class="col-md-5">  
+    <div class="col-xs-6">  
       <img class="img-responsive" src="../images/watch2.JPG">
     </div>
-<div class="col-md-7 yellow">
-      <h4> Mosaique Watches </h4>
-      <p> Content </p>
+<div class="col-xs-6">
+      <img class="img-responsive" src="../images/set1.jpg">
     </div>
 </div> 
-
-
-
-
-
-
+<h3 class="text-center">  Watches donated by <a href = "http://www.mosaiqe.com/">Mosaiqe </a></h3>
 <hr>
+<a href= http://www.ebay.co.uk/usr/sistah-space target="-blank"><h3 class="text-center"> Visit our Ebay page!</h3></a>
+
 </div>
 </div>
 
